--- a/sass/components/_tag-filter.scss
+++ b/sass/components/_tag-filter.scss
@@ -1,7 +1,9 @@
 .tag__filter {
     display: flex;
     flex-direction: column;
-    margin: 15px 0px 0px 0px;
+    margin: 15px 0px 30px 0px;
+    z-index: 10;
+    position: relative;
     @media screen and (min-width: 1024px) {
         display: flex;
         flex-direction: row;
