--- a/sass/pages/_recipe-card.scss
+++ b/sass/pages/_recipe-card.scss
@@ -1,6 +1,7 @@
 .recipes__section {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 25px;
     @media screen and (min-width: 1024px) {
         display: flex;
